# service-registry

./: .env_example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  consts.py  docker-compose.yaml  graceful_shutdown.py  main.py  pyproject.toml  requirements.txt  utils.py
patient_account/: __init__.py  consts.py  service_discover.py  views.py
src/: consts.py  main.py  utils.py  wsgi.py
src/patient_account/: __init__.py  consts.py  load_balancing.py  service_discover.py  views.py
